# SmartServerVS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SmartServerVS.cpp  SmartServerVS.h  index.html  main.cpp  settings.gradle.kts  vcpkg.json
app/: build.gradle.kts
app/src/androidTest/java/com/example/smarthomeapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/smarthomeapp/: ApiService.kt  MainActivity.kt  RetrofitClient.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
enc_temp_folder/6e2d286bbca5251afd7db8d499fad859/: main.cpp
gradle/wrapper/: gradle-wrapper.properties
include/: Conditioner.h  ControllableDevice.h  DatabaseManager.h  Door.h  LightBulb.h
src/: Conditioner.cpp  DatabaseManager.cpp  Door.cpp  LightBulb.cpp  main.cpp
