cmake_minimum_required(VERSION 3.20)
project(SmartServerVS)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Crow CONFIG REQUIRED)
file(GLOB_RECURSE PROJECT_SOURCES "src/*.cpp")
add_executable(SmartServerVS ${PROJECT_SOURCES} "src/LightBulb.cpp" "include/Conditioner.h" "src/Conditioner.cpp" "include/Door.h" "src/Door.cpp")
target_include_directories(SmartServerVS PRIVATE "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(SmartServerVS PRIVATE Crow::Crow)